Finished icon Editor; to edit icons launch "source StartOTS.sh --config"

--- a/WebGUI/html/iconEditor.html
+++ b/WebGUI/html/iconEditor.html
@@ -55,9 +55,10 @@ text-align:center}
     <h2>Permissions</h2>
     <p>Permissions Note: 0 := Inactive, 10 := Standard User, 100 := Expert, 255 := Super User</p>
     <h2>Images</h2>
-    <p>Place icon images in: <em>otsdaq/ots/WebGUI/images/iconImages</em></p>
+    <p>Place icon images in: <em>ots/otsdaq-utilities/WebGUI/images/iconImages</em></p>
     <h2>Webpages</h2>
-    <p> Place webpages in: <em>otsdaq/ots/WebGUI/html/</em></p>
+    <p> Place webpages in: <em>ots/otsdaq-utilities/WebGUI/html/</em></p>
+    <p> 	& javascript in: <em>ots/otsdaq-utilities/WebGUI/js/</em></p>
     <hr>
     <p>Click <a target="_blank" href="https://docs.google.com/document/d/1Mw4HByYfLo1bO5Hy9npDWkD4CFxa9xNsYZ5pJ7qwaTM/edit?usp=sharing " title="Click to open ots documentation">here</a> for more documentation.</p>
     <a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'">Close</a></div>
