--- a/WebGUI/html/Visualization.html
+++ b/WebGUI/html/Visualization.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en"> 
 	<head>
+		<title>Visualization</title>
 
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Donegal+One'>
 				
-		<title>Visualization</title>
 		<style type="text/css">			
 			body {
 				background-color: rgb(50,50,50);
@@ -59,10 +59,10 @@
 		
 		<link rel="stylesheet" type="text/css" href="/WebPath/css/RootViewer.css" />
 		<script type="text/JavaScript" src="/WebPath/js/visualizers_lib/RootViewer.js"></script>
-		<link rel="stylesheet" type="text/css" href="/WebPath/css/2dViewer.css">
-		<script type="text/JavaScript" src="/WebPath/js/visualizers_lib/2dViewer.js"></script>
-		<link rel="stylesheet" type="text/css" href="/WebPath/css/3dViewer.css">
-		<script type="text/JavaScript" src="/WebPath/js/visualizers_lib/3dViewer.js"></script>
+//		<link rel="stylesheet" type="text/css" href="/WebPath/css/2dViewer.css">
+//		<script type="text/JavaScript" src="/WebPath/js/visualizers_lib/2dViewer.js"></script>
+//		<link rel="stylesheet" type="text/css" href="/WebPath/css/3dViewer.css">
+//		<script type="text/JavaScript" src="/WebPath/js/visualizers_lib/3dViewer.js"></script>
 		
 		
 		<script>		
@@ -152,12 +152,12 @@
 			function initVisualizer() {
 				var v = getRadioGroupValue("viewType");
 				Debug.log("initVisualizer: " +  v);			
-				if(v == 0)
+//				if(v == 0)
 					RootViewer.launch();	
-				else if(v == 1)
-					2dViewer.launch();	
-				else if(v == 2)
-					3dViewer.launch();
+//				else if(v == 1)
+//					2dViewer.launch();	
+//				else if(v == 2)
+//					3dViewer.launch();
 					
 			}
 			
