Fixed lower cases

--- a/WebGUI/html/PhysicsLore.html
+++ b/WebGUI/html/PhysicsLore.html
@@ -46,7 +46,7 @@
 			function calRequest() {			
 												
 				//get current calRequest from server
-				DesktopContent.XMLHttpRequest("request?RequestType=getAliasList", "", calRequestHandler);				
+				DesktopContent.XMLHttpRequest("Request?RequestType=getAliasList", "", calRequestHandler);				
 			}
 			
 
