Added reset user data button

--- a/WebGUI/html/editSecurity.html
+++ b/WebGUI/html/editSecurity.html
@@ -80,6 +80,26 @@
   </div>	
   </div> 	
   </li>
+  		
+  		
+  <li>
+	
+  <div class="shape">
+	<div class="glow" id="ResetSecurityUserData">
+	<a href="#"  class="overlay round"></a>
+	<div class="details">
+		<span class="heading">Reset Security User Data</span>
+		<hr />
+		<p>Click this button to reset all security user data.</p>		
+		<a href="#" onclick="confirm()" class="button">Select</a>		
+	</div>
+	<div class="bg"></div>
+	<div class="base">
+		<img src="../images/windowContentImages/editSecurity-Reset.png" alt="" />
+	</div>
+  </div>	
+  </div> 	
+  </li>
 
   	
   </ul>
