Working on Macromaker

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -57,9 +57,9 @@
 	
 	    <div class='mainBlock' id='fecList'>
 		    <h3>List of FECS</h3>
-			FEC1<br>
-			FEC2<br>
-			FEC3
+			<form action="demo_form.asp" method="get">
+	        <p><div id='list'>Loading</div><input type="checkbox" id="FECcheck"></p>
+	        </form>
 		</div>
 		
 		<div class='mainBlock' id='macroLib'>
@@ -74,12 +74,13 @@
 			<p><small>Manual Commands<a style="margin-left:15px" href=""><u>Macro Maker</u></a></small></p>
 		    </div>
 	        <h3>Manual Commands</h3>
-	        <p>Address:  <input type="text" id="addressInput" style="color:black;margin-right:5px;width:90px" /><button onclick="enterAddress()" style="color: black">Enter</button></p>
+	        <p>Address:  <input type="text" id="addressInput" style="color:black;margin-right:5px;width:90px" /><button onclick="clearAddress()" style="color: black">Clear</button></p>
 	        <div id="output1">Please enter an address.</div>
 	       
-	        <p style="margin-left:22px">Data:  <input type="text" id="dataInput" style="color:black;margin-right:5px;width:90px"/><button onclick="enterData()" style="color: black">Enter</button></p>
+	        <p style="margin-left:22px">Data:  <input type="text" id="dataInput" style="color:black;margin-right:5px;width:90px"/><button onclick="clearData()" style="color: black">Clear</button></p>
 	        <div id="output2">Please enter your data.</div>
-	        <p style="margin-top:10px;margin-left:50px"><button onclick="callRead()" style="color: black;margin-right:20px">Read</button><button onclick="callWrite()" style="color: black" >Write</button></p>
+	        
+	        <p style="margin-top:10px;margin-left:50px"><button onclick="callRead()" style="color: black;margin-right:20px">Read</button><button onclick="callWrite()" style="color: black">Write</button></p>
 		</div>
 		
 		<div class='mainBlock' id='instruction'>
@@ -93,9 +94,9 @@
 		   <h3>Command History</h3>
            <div id="historyContent" style="overflow:scroll;padding:5px;">Scroll to see the history of commands. Click to rerun. <br></div>
 		</div>
-	
-
 
 	</body>
 
 </html>
+
+ 
