--- a/WebGUI/html/iconEditor.html
+++ b/WebGUI/html/iconEditor.html
@@ -8,39 +8,51 @@
 <script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script><script type="text/JavaScript" src="/WebPath/js/DesktopWizardWindowContentCode.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/iconEditor.js"></script>
 <style>
-table{
-border-collapse: collapse;}
-td{
-vertical-align:top;
-text-align:center}
-
-.black_overlay{
-	display: none;
-	position: absolute;
-	top: 0%;
-	left: 0%;
-	width: 100%;
-	height: 100%;
-	background-color: black;
-	z-index:1001;
-	-moz-opacity: 0.8;
-	opacity:.80;
-	filter: alpha(opacity=80);
-}
-
-.white_content {
-	display: none;
-	position: absolute;
-	top: 25%;
-	left: 25%;
-	width: 50%;
-	height: 50%;
-	padding: 16px;
-	border: 8px solid gray;
-	background-color: white;
-	z-index:1002;
-	overflow: auto;
-}
+	table
+	{
+		border-collapse: collapse;
+	}
+	
+	td
+	{
+		vertical-align:top;
+		text-align:center
+	}
+	
+	.black_overlay 
+	{
+		display: none;
+		position: absolute;
+		top: 0%;
+		left: 0%;
+		width: 100%;
+		height: 100%;
+		background-color: black;
+		z-index:1001;
+		-moz-opacity: 0.8;
+		opacity:.80;
+		filter: alpha(opacity=80);
+	}
+	
+	.white_content
+	{
+		display: none;
+		position: absolute;
+		top: 25%;
+		left: 25%;
+		width: 50%;
+		height: 50%;
+		padding: 16px;
+		border: 8px solid gray;
+		background-color: white;
+		z-index:1002;
+		overflow: auto;
+	}
+	
+	input 
+	{
+		width: 400px;
+	}
 </style>
 </head>
 
