Changing all FEC/FED to FEW/FER

--- a/WebGUI/html/FEWSupervisor.html
+++ b/WebGUI/html/FEWSupervisor.html
@@ -38,7 +38,7 @@
 	<body>	
 		<br><br><br>
 		
-		Hello I'm the FECSupervisor
+		Hello I'm the FEWSupervisor
 		<div id='myDiv'></div>
 		addr <input type='text' id='addr' value='01'/> <br>
 		data <input type='text' id='data' value='ABCD'/> <br>
