--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -97,7 +97,7 @@
 		
 		<div class='mainBlock' id='instruction'>
 		  <h3>Instructions</h3>
-          <p style="text-align:justify">To read or write:<br>1. Select one or more FECs from the list of FECs;
+          <p style="text-align:justify">To read or write:<br>1. Select one or more FEWs from the list of FEWs;
           <br>2. Enter the target address above. If you choose to write, you also need to enter the data;
           <br>3. Select the format of your address and data (hex/dec). If you choose to read, the data format selected will be expected. 
           <br>4. Select either "Write" or "Read" to finish your manual command.
