--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -41,6 +41,10 @@
 		.mainBlock {
 			position:absolute;
 		}
+		
+		#list {
+			width:100% !important;
+		}
 	
 		.historyContent{
             padding:0.5em 0 0 0;
