MacroMaker multi select box now works with multi selection

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -65,10 +65,13 @@
         	margin-bottom:10px;
         }
         
-        @media only screen and (max-height: 400px){
+        @media only screen and (max-height: 300px){
         	#instruction{
         	display:none;
         	}
+        	#macroLib {
+		    display:none;
+			}
         }
         
 		</style>
