--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -159,7 +159,7 @@
 		
 		<div class='mainBlock' id='main'>
 			<div id="nav">
-			<p><small><a>Manual Commands</a><a style="margin-left:15px" href="#">Macro Maker</a></small></p>
+			<p><small><a>Manual Commands</a><a style="margin-left:15px" href="MacroMaker2.html">Macro Maker</a></small></p>
 		    </div>
 	        <h3>Manual Commands</h3>
 	        <p>Address:  <input type="text" id="addressInput" class="inputBox" placeholder="0x000000064"/><button onclick="clearAddress()" class="select">Clear</button></p>
