logbook fix for when nogitdata folders are missing

--- a/WebGUI/html/Logbook.html
+++ b/WebGUI/html/Logbook.html
@@ -913,6 +913,8 @@
 				var el = document.getElementById("experimentTextBox");	
 				el.value = "";
 				el.focus();
+				applyExperimentsSearch(el.value);
+				displayExperiments();
 			}
 
 
