changed font to match otsdaq web site

--- a/WebGUI/html/Chat.html
+++ b/WebGUI/html/Chat.html
@@ -5,7 +5,7 @@
 		<style type="text/css">		
 			body {
 				background-color: #CCB399;
-				font-family: 'Times New Roman';
+				font-family: 'Comfortaa', serif;
 			}
 			
 			#clearDiv {
@@ -204,7 +204,8 @@
 			
 		</style>
 		
-		
+
+		<link href='http://fonts.googleapis.com/css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
