--- a/WebGUI/html/UserSettings.html
+++ b/WebGUI/html/UserSettings.html
@@ -5,7 +5,7 @@
 		<style type="text/css">			
 			body {
 				background-color: rgb(200,200,200);
-				font-family: 'Times New Roman';
+				font-family: 'Comfortaa', serif;
 			}
 			
 			#clearDiv {
@@ -28,7 +28,7 @@
 			}
 			
 			#colorInputs {
-				width: 360px;
+				width: 380px;
 			}		
 						
 			#colorInputs input {
@@ -42,13 +42,13 @@
 			}
 			
 			.Settings-colorName {
-				width:120px;
+				width:140px;
 				text-align: right;
 			}
 			
 			.Settings-colorBox {
-				width:30px;
-				height:30px;
+				width:25px;
+				height:25px;
 				margin: -1px 0 5px 10px;
 				border: 2px solid black;
 			}
@@ -131,7 +131,8 @@
 			
 		</style>
 		
-		
+
+		<link href='http://fonts.googleapis.com/css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
