Added loading command history on init

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -93,7 +93,7 @@
 		}
 		
         .innerClass1{
-			background: #002040;
+			background: #002a52;
 			padding: 0.2em 0.2em 0.2em 0.1em;
 			cursor: pointer; 
 		}
